# raubase_ros

./: .gitignore  CMakeLists.txt  LICENCE  README.md  mkdocs.yml  package.xml
_old/: cedge.cpp  scam.cpp  steensy.cpp  steensy.h
action/: AskCalibration.action
docs/: 404.html  index.html
docs/installation/intro/: index.html
docs/installation/multicast/: index.html
docs/installation/package/: index.html
docs/introduction/why/: index.html
docs/messages/data/: index.html
docs/messages/messages/: index.html
docs/messages/results/: index.html
docs/python_api/conditions/: index.html
docs/python_api/requirements/: index.html
docs/python_api/shared_cmd/: index.html
docs/python_api/shared_data/: index.html
docs/search/: search_index.json
docs/tasks/behavior/: index.html
docs/tasks/task/: index.html
docs/tools/: index.html
include/: node_template.hpp
include/camera/: camera.hpp
include/common/: math.hpp  shared_queue.hpp  types.hpp  upid.hpp  utime.hpp
include/common/math/: controller.hpp  fixed_pid_control.hpp  math.hpp  pid_control.hpp
include/common/robot/: edge.hpp  kinematics.hpp
include/common/utils/: math.hpp  rmw.hpp  types.hpp  upid.hpp  utime.hpp
include/controller/: controller.hpp  edge_controller.hpp
include/localization/: localization.hpp
include/simulator/: simulator.hpp
include/simulator/plugins/: Motor.hpp
include/teensy/: teensy.hpp  usb_connection.hpp
include/teensy/interface/: message.hpp  message_queue.hpp  proxy_interface.hpp
include/teensy/proxy/: distance.hpp  encoder.hpp  heartbeat.hpp  imu.hpp  line_sensor.hpp  motor.hpp  servo.hpp
launch/: camera.launch.py
msg/: ArUcoObject.msg  BallObject.msg  CmdLineFollower.msg  CmdMove.msg  CmdServoPosition.msg  ControllerState.msg  DataDistance.msg  DataGPIO.msg  DataGPIOArray.msg  DataLineSensor.msg  DistanceData.msg  HeartBeatState.msg  LineSensorData.msg  MotorVoltage.msg  MoveCmd.msg  ObjectArUco.msg  ObjectBall.msg  Odometry.msg  ResultArUco.msg  ResultBalls.msg  ResultLine.msg  ResultYolo.msg  SetCameraMode.msg  SetCameraMode.srv  SetControllerInput.msg  SetLineSensorConfig.srv  StateVelocityController.msg  YoloObject.msg
raubase_msgs/: CMakeLists.txt  package.xml
raubase_msgs/action/: CalibCamera.action
raubase_msgs/msg/: CmdLineFollower.msg  CmdMotorVoltage.msg  DataDistance.msg  DataEncoder.msg  DataGPIO.msg  DataServo.msg  ObjectYolo.msg  ResultEdge.msg  ResultOdometry.msg  SetLineSensorConfig.msg  StateTeensy.msg  StateVelocityController.msg
raubase_msgs/srv/: CalibrateCamera.srv  ConfigureGPIO.srv  ToggleLineSensor.srv
raubase_ros/: __init__.py  package.xml
raubase_ros/calib/: __init__.py  line_sensors.py  maddahi_wheel.py
raubase_ros/checkers/: __init__.py  line.py
raubase_ros/config/: config_file.py  static.py
raubase_ros/constants/: __init__.py  files.py  namespaces.py  rmw.py
raubase_ros/include/localization/: localization.hpp
raubase_ros/include/simulator/: simulator.hpp
raubase_ros/include/teensy/: teensy.hpp  usb_connection.hpp
raubase_ros/interface/: image.py
raubase_ros/plan/: __init__.py  behaviour.py  conditions.py  task.py
raubase_ros/plan/data/: io_wrapper.py  requirements.py  shared_control.py  shared_data.py  topics.py
raubase_ros/raubase_ros/: __init__.py
raubase_ros/raubase_ros/boards/: __board_interface.py  __init__.py  robotio.py
raubase_ros/raubase_ros/checkers/: linevel.py
raubase_ros/raubase_ros/config/: __init__.py  config_file.py
raubase_ros/raubase_ros/constants/: general.py
raubase_ros/raubase_ros/interface/: image.py
raubase_ros/raubase_ros/plan/: behaviour.py  conditions.py  task.py
raubase_ros/raubase_ros/utils/: images.py
raubase_ros/raubase_ros/wrappers/: node.py
raubase_ros/resources/default/: default_camera.yaml  default_control.yaml  default_line.yaml  default_localization.yaml
raubase_ros/scripts/: calibration  checking
raubase_ros/scripts/utils/: odometry_display
raubase_ros/src/camera/: calibration.cpp
raubase_ros/src/common/: utime.cpp
raubase_ros/src/controller/: controller.cpp  rl_velocities.cpp
raubase_ros/wrappers/: __init__.py  node.py  parameters.py
raubase_sim/: CMakeLists.txt  README.md  package.xml
resources/default/: default_camera.yaml  default_line.yaml  default_teensy.yaml
resources/launch/: camera.launch.py  teensy.launch.py
robocup_description/: CMakeLists.txt  README.md  dummy_joint_state.py  package.xml
robocup_description/assets/robocup-xx/: sun.xacro
robocup_description/assets/robocup-xx/SlopeIn/: SlopeIn.dae  SlopeIn.stl
robocup_description/assets/robocup-xx/SlopeOut/: SlopeOut.dae  SlopeOut.stl
robocup_description/assets/robocup-xx/Stairs/: Stairs.dae  Stairs.stl
robocup_description/assets/robocup-xx/Uphill/: Uphill.dae  Uphill.stl
robocup_description/cmake/: generate_robot_files.cmake  register_robot.cmake  to_snake_case.cmake
robocup_description/cmake/templates/: CMakeLists.txt  package.xml
robocup_description/maps/: robocup-25.sdf.xacro
robocup_description/models/robocup-xx/: volumes.sdf.xacro
robocup_description/robot/robobot-v9/: robobot_v9.urdf
robocup_description/robot/robobot-v9/colliders/: robobot_v9_body.stl  robobot_v9_wheel.stl  robobot_v9_wheel_full.stl
robocup_description/robot/robobot-v9/launch/: spawn_robot.launch.py
robocup_description/robot/robobot-v9/mesh/: robobot_v9_wheel.dae
scripts/: calibration  checking  image_processor  image_processor.py  mixer  odometry_display  rpi_io  uncompressor
scripts/utils/: control_check  motor_calib  odometry_display
src/: sstate.cpp  upid.cpp  utime.cpp
src/camera/: camera.cpp
src/common/: upid.cpp  utime.cpp
src/controller/: controller.cpp  heading.cpp  rl_velocities.cpp
src/line_follow/: controller.cpp
src/localization/: odometry.cpp
src/simulator/: simulator.cpp
src/teensy/: message.cpp  teensy.cpp  teensy_tx_rx.cpp  teensy_usb.cpp
src/test/: main.cpp
srv/: AskCameraImage.srv  CalibrateDistanceSensor.srv  ConfigureGPIO.srv  GetGPIOProperties.srv  SetCameraMode.srv  SetLineSensor.srv  TestService.srv
(+46 files in other folders)
