<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotbot_ros</name>
  <version>0.1.0</version>
  <description>Robotbot Raubase ROS2 version</description>
  <maintainer email="geoffrey.cote@centraliens-nantes.org">Geoffrey Côte</maintainer>
  <author>Geoffrey Côte</author>
  <url type="repository">https://github.com/Baxterminator/robotbot_ros</url>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>ament_index</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_package</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>